--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-template",
+  "name": "echart-vue-starter",
   "version": "0.1.0",
   "scripts": {
     "dev": "vite",
@@ -7,10 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "pinia": "^2.0.22",
-    "sass": "^1.55.0",
+    "echarts": "^5.4.0",
+    "pinia": "^2.0.23",
+    "sass": "^1.56.1",
     "vue": "^3.2.33",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.4",
